--- a/index.html
+++ b/index.html
@@ -7,33 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="quiz-container">
+    <div id="quiz-container">
         <h1>Quiz App</h1>
-        
-        <!-- Category Selection -->
-        <div id="category-selection">
+        <div id="category-container">
             <h2>Select a Category</h2>
-            <button class="category-btn" onclick="startQuiz('science')">Science</button>
-            <button class="category-btn" onclick="startQuiz('computer')">Computer</button>
-            <button class="category-btn" onclick="startQuiz('biology')">Biology</button>
-            <button class="category-btn" onclick="startQuiz('math')">Math</button>
-            <button class="category-btn" onclick="startQuiz('history')">History</button>
-        </div>
-
-        <!-- Quiz content -->
-        <div id="quiz" style="display:none;">
-            <div id="question-container">
-                <p id="question">Question will be here</p>
-                <div id="options-container">
-                    <!-- Options will be added here dynamically -->
-                </div>
+            <div id="categories">
+                <button onclick="startQuiz('science')">Science</button>
+                <button onclick="startQuiz('computer')">Computer</button>
+                <button onclick="startQuiz('biology')">Biology</button>
+                <button onclick="startQuiz('math')">Math</button>
+                <button onclick="startQuiz('history')">History</button>
             </div>
-            <button id="next-btn">Next</button>
-            <p id="score"></p>
+        </div>
+        <div id="quiz" style="display: none;">
+            <h2 id="question"></h2>
+            <div id="options"></div>
+        </div>
+        <div id="results" style="display: none;">
+            <h2 id="score"></h2>
+            <button onclick="resetQuiz()">Start Over</button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
+
