--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- SETUP CARD -->
       <section id="setup" class="card section">
         <h1 class="h1">Test your knowledge</h1>
-        <p class="muted">Pick a category, number of questions, and difficulty. You’ll have a timer—good luck!</p>
+        <p class="muted">Pick a category, number of questions, and difficulty.</p>
 
         <form id="setupForm" class="grid two gap">
           <label class="field">
@@ -129,9 +129,10 @@
   </dialog>
 
   <footer class="footer container">
-    <small class="muted">© 2025 QuickQuiz. Built by you ✨</small>
+    <small class="muted">© 2025 QuickQuiz. Built by Charmie Guillaume ✨</small>
   </footer>
 
   <script src="script.js" defer></script>
 </body>
 </html>
+
