--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <!-- Modals -->
   <dialog id="about">
     <h3>About</h3>
-    <p>QuickQuiz pulls questions from Open Trivia DB so each category can have 20+ questions. If you’re offline, it falls back to a smaller built-in set.</p>
+    <p>QuickQuiz is a fun and easy way to test your knowledge. Play short quizzes across different subjects, learn something new, and challenge yourself anytime, anywhere.</p>
     <form method="dialog"><button class="btn">Close</button></form>
   </dialog>
 
@@ -135,4 +135,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
