--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Top nav -->
+  
   <header class="nav">
     <div class="container nav__inner">
       <div class="brand">
@@ -24,7 +24,7 @@
 
   <div class="hero">
     <main class="container">
-      <!-- SETUP CARD -->
+      
       <section id="setup" class="card section">
         <h1 class="h1">Test your knowledge</h1>
         <p class="muted">Pick a category, number of questions, and difficulty.</p>
@@ -47,7 +47,7 @@
 
           <label class="field">
             <span>Questions</span>
-            <!-- default to 20 -->
+            <!-- Up to 20 questions-->
             <input id="count" type="number" min="5" max="50" step="1" value="20" />
           </label>
 
@@ -89,7 +89,7 @@
         </div>
       </section>
 
-      <!-- RESULTS -->
+      <!-- Answer to the quiz -->
       <section id="results" class="card section hidden">
         <h2 class="h2">Your results</h2>
         <div class="stats">
@@ -111,7 +111,7 @@
     </main>
   </div>
 
-  <!-- Modals -->
+  
   <dialog id="about">
     <h3>About</h3>
     <p>QuickQuiz is a fun and easy way to test your knowledge. Play short quizzes across different subjects, learn something new, and challenge yourself anytime, anywhere.</p>
@@ -135,5 +135,6 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
